<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/schiffeversenken"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ma.schiffeversenken.android.view.Settings" >

    <CheckBox
        android:id="@+id/Vibration_aus_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_text_vibration_off" />

    <CheckBox
        android:id="@+id/Lautlos_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Vibration_aus_Checkbox"
        android:layout_alignLeft="@+id/Vibration_aus_Checkbox"
        android:text="@string/button_text_mute" />

    <CheckBox
        android:id="@+id/Cheats_Enabled_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Vibration_aus_Checkbox"
        android:layout_below="@+id/Vibration_aus_Checkbox"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_cheats_checkbox"
        android:visibility="visible" />

</RelativeLayout>
